# claude-orchestrator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/: verify-by-consensus.md
docs/: ARCHITECTURE.md  FUTURE_IMPROVEMENTS.md
src/: __init__.py  analyzer.py  calendar_client.py  canvas_browser.py  canvas_client.py  claude_cli_bridge.py  context.py  daemon.py  database.py  github_client.py  gmail_client.py  google_tasks.py  logging_config.py  project_memory.py  run_telegram_bot.py  security.py  server.py  session_manager.py  telegram_bot.py
src/claude_orchestrator/: CLAUDE.md  __init__.py  __main__.py  analyzer.py  claude_cli_bridge.py  cli.py  config.py  context.py  daemon.py  database.py  executor.py  github_client.py  hooks.py  instrumentation.py  logging_config.py  project_memory.py  protocol.md  schemas.py  security.py  server.py  visual_verification.py  workflow.py
src/claude_orchestrator/agents/: __init__.py  code-reviewer.md  code-simplifier.md  dependency-health.md  linter-checker.md  multi-modal-verifier.md  plan-reviewer.md  prompt-optimizer.md  research-lead.md  researcher.md  review-lead.md  security-scanner.md  unit-test-runner.md  verifier.md  visual-verifier.md
src/claude_orchestrator/hooks/: session-start.sh
src/claude_orchestrator/knowledge/: __init__.py  indexer.py  retriever.py
src/claude_orchestrator/orchestrator/: __init__.py  batch.py  context_builder.py  delegator.py  onboarding.py  planner.py  supervisor.py  verifier.py
src/claude_orchestrator/plans/: __init__.py  models.py  store.py
src/claude_orchestrator/skills/: __init__.py  loader.py
src/claude_orchestrator/tools/: __init__.py  context.py  core.py  github.py  knowledge.py  memory.py  orchestrator.py  plans.py  secrets.py  sessions.py  skills.py  stubs.py  verification.py  visual.py  workflow.py  worktree.py
src/claude_orchestrator/visualizer/: __init__.py  dashboard.py  plan_progress.py  session_timeline.py  tool_stats.py  utils.py
src/claude_orchestrator/web/: __init__.py  api.py  app.py  templates.py
src/knowledge/: crawler.py
src/orchestrator/: __init__.py  planner.py  supervisor.py  verifier.py
src/plans/: __init__.py  store.py
src/skills/: __init__.py  executor.py
tests/: __init__.py  demo.py  framework.py  hairstyle_demo.py  helpers.py  test_agents.py  test_batch.py  test_cli.py  test_cli_viz.py  test_config.py  test_delegation.py  test_e2e.py  test_hooks.py  test_instrumentation.py  test_onboarding.py  test_orchestrator.py  test_planning.py  test_schemas.py  test_server.py  test_session_hook.py  test_stubs.py  test_supervision.py  test_verification.py  test_viz_views.py  test_web.py  test_workflow.py  test_worktree.py  test_worktree_e2e.py  visualizer.py
