[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-orchestrator"
version = "0.2.0"
description = "MCP server for Claude Code: planning, verification, TDD, and progress tracking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
	{name = "Danny Willow Liu"}
]
keywords = ["claude", "mcp", "planning", "verification", "developer-tools"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

dependencies = [
	"mcp>=1.0.0",
	"aiosqlite>=0.19.0",
	"python-dotenv>=1.0.0",
	"platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-asyncio>=0.21.0",
	"ruff>=0.1.0",
	"mypy>=1.0.0",
	"bandit>=1.7.0",
]

[project.scripts]
claude-orchestrator = "claude_orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/dannywillowliu-uchi/claude-orchestrator"
Repository = "https://github.com/dannywillowliu-uchi/claude-orchestrator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["W191", "E101"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
