[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-orchestrator"
version = "0.3.0"
description = "Lightweight workflow system for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = []
keywords = ["claude", "mcp", "workflow", "verification", "developer-tools"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

dependencies = [
	"mcp>=1.0.0",
	"platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-asyncio>=0.21.0",
	"ruff>=0.1.0",
	"mypy>=1.0.0",
	"bandit>=1.7.0",
]

[project.scripts]
claude-orchestrator = "claude_orchestrator.cli:main"

[project.urls]
Homepage = "https://github.com/dannywillowliu-uchi/claude-orchestrator"
Repository = "https://github.com/dannywillowliu-uchi/claude-orchestrator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_orchestrator = ["CLAUDE.md", "agents/*.md", "protocol.md", "hooks/*.sh"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["W191", "E101"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
